force-app/main/default/objects/Contact_Location_Updated__e/Contact_Location_Updated__e.object-meta.xml
<CustomObject>
    <description>track Contact geolocation changes</description>
    <label>Contact Location Updated</label>
    <pluralLabel>Contact Location Updated</pluralLabel>
</CustomObject>