force-app/main/default/objects/Contact_Location_Updated__e/fields/ROI_City__c.field-meta.xml
<CustomField>
    <fullName>ROI_City__c</fullName>
    <label>ROI City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>