force-app/main/default/objects/Contact_Location_Updated__e/fields/ROI_Latitude__c.field-meta.xml
<CustomField>
    <fullName>ROI_Latitude__c</fullName>
    <label>ROI Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>