force-app/main/default/objects/Contact_Location_Updated__e/fields/ROI_Longitude__c.field-meta.xml
<CustomField>
    <fullName>ROI_Longitude__c</fullName>
    <label>ROI Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>